2009-09-29  Dustin J. Mitchell <dustin@zmanda.com>
	* amandad-src/amandad.h common-src/amanda.h: move constants
	  to amanda.h
	* common-src/util.c common-src/util.h: add openbsd_fd_inform, to
	  inform the OpenBSD pthread library about high-numbered fd's created
	  by amandad
	* client-src/noop.c client-src/selfcheck.c client-src/sendbackup.c
	  client-src/sendsize.c restore-src/amidxtaped.c server-src/amindexd.c:
	  use openbsd_fd_infom

2009-09-28  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/util.h: fix comment
	* server-src/planner.c: planner runs setuid, so tell check_running_as

2009-09-28  Nikolas Coukouma <atrus@zmanda.com>
	* device-src/s3.c: fix day of the week in Date header

2009-09-25  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/amflock.c: set the return value
	* device-src/xfer-dest-taper.c: lock the slab mutex when prebuffering
	* perl/Amanda/Changer.pm: check for locking errors in Changer.pm
	* perl/Amanda/Changer/robot.pm: handle the lru driveorder better, and
	  handle configurations where no tape device is specified better
	* server-src/amtape.pl: handle the case where loaded_in == 0

2009-09-25  Nikolas Coukouma <atrus@zmanda.com>
	* ndmp-src/ndmlib.h: apply Amanda's "force large file support" to NDMP

2009-09-24  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda-devices.7.xml: fix typo

2009-09-24  Paul C. Mantz <pcmantz@zmanda.com>
	* perl/Amanda/Report.pm: added accessor functions
	* installcheck/Amanda_Report.pl: tests

2009-09-24  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/property.c: remove old property instance

2009-09-24  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda-devices.7.xml: update property documentation
	  and rename READ_BUFFER_SIZE to READ_BLOCK_SIZE
	* perl/Amanda/Changer.pm restore-src/restore.c restore-src/restore.h
	  device-src/property.c device-src/property.h device-src/device.c
	  man/xml-source/amanda-changers.7.xml: rename property